made nav header fixed, added spacing div

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -10,7 +10,8 @@
   -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.13);
   background-color: white;
   z-index: 10;
-  position: relative;
+  position: fixed;
+  top: 0;
 }
 
 /* left section of navbar */
